// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DroppablePlaceholder snapshot renders 1`] = `
<div
  className="className"
>
  <Component>
    <Previews
      choices={
        Array [
          Object {
            "content": "content",
            "id": "1",
          },
        ]
      }
      onDeleteChoice={[MockFunction]}
    />
  </Component>
</div>
`;

exports[`DroppablePlaceholder snapshot renders helper 1`] = `
<div
  className="className"
>
  <Component>
    <WithStyles(Component) />
  </Component>
</div>
`;
